--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
-name: 'Sarif Multitool'
+name: 'sarif'
 description: 'Execute sarif multitool'
 inputs:
-  arguments:  # id of input
-    description: 'Arguments to be sent to sarif multitool'
-    required: true
+  command:  # id of input
+    description: 'command to be sent to sarif multitool'
+    required: false
     default: 'version'
 outputs:
   time: # id of output
@@ -12,4 +12,4 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.arguments }}
+    - ${{ inputs.command }}
